syntax = "proto3";

package com.unitedtrader.derby.test.grpc;

option java_multiple_files = true;
option java_package = "com.unitedtrader.derby.test.grpc";
option java_outer_classname = "TestProto";

service AuthenticationService {
    rpc authenticate(AuthenticationData) returns (AuthToken) {}
}

service TestService {
    rpc GetPrice(Ticker) returns (stream MonetaryAmount) {}

    rpc GetPriceWithCancellation(stream Ticker) returns (stream MonetaryAmount) {}
}

message AuthenticationData {
    string emailOrLogin = 1;
    string password = 2;
}

message AuthToken {
    string token = 1;
}

message Ticker {
    string symbol = 1;
}

message MonetaryAmount {
    int64 value = 1;
    Currency currency = 2;
}

enum Currency {
    USD = 0;
    RUB = 1;
}